Make stuff more responsive

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
   <header>
     <div class="hero container">
-      <img class="hero__logo" src="res/svg/logo.svg" alt="Logo">
+      <img class="hero__logo" src="./res/svg/logo.svg" alt="Logo">
       <div class="hero__text-group">
         <h1 class="hero__heading">Murlisgib</h1>
         <div class="hero__subheading">Melon flavored CS:GO Instagib</div>
