--- a/index.html
+++ b/index.html
@@ -41,28 +41,28 @@
       <div class="servers">
         <ul class="servers__cluster" data-server-cluster-index="0">
           <li class="servers__server" data-server-index="0">
-            <div class="servers_name">EU 1</div>
-            <div class="servers_map"></div>
-            <div class="servers_players"></div>
-            <div class="servers_status">Online</div>
+            <div class="servers__name">EU 1</div>
+            <div class="servers__map"></div>
+            <div class="servers__players"></div>
+            <div class="servers__status"></div>
           </li>
           <li class="servers__server" data-server-index="1">
-            <div class="servers_name">EU 2</div>
-            <div class="servers_map"></div>
-            <div class="servers_players"></div>
-            <div class="servers_status">Online</div>
+            <div class="servers__name">EU 2</div>
+            <div class="servers__map"></div>
+            <div class="servers__players"></div>
+            <div class="servers__status"></div>
           </li>
           <li class="servers__server" data-server-index="2">
-            <div class="servers_name">EU 3</div>
-            <div class="servers_map"></div>
-            <div class="servers_players"></div>
-            <div class="servers_status">Online</div>
+            <div class="servers__name">EU 3</div>
+            <div class="servers__map"></div>
+            <div class="servers__players"></div>
+            <div class="servers__status"></div>
           </li>
           <li class="servers__server" data-server-index="3">
-            <div class="servers_name">EU 4</div>
-            <div class="servers_map"></div>
-            <div class="servers_players"></div>
-            <div class="servers_status">Online</div>
+            <div class="servers__name">EU 4</div>
+            <div class="servers__map"></div>
+            <div class="servers__players"></div>
+            <div class="servers__status"></div>
           </li>
         </ul>
       </div>
