--- a/index.html
+++ b/index.html
@@ -117,29 +117,114 @@
 
       <h3>Introduction</h3>
       <div class="txt-img">
-        <video src=""></video>
-        <div class="text-group">
+        <video autoplay loop muted disableremoteplayback class="txt-img__img">
+          <source src="./res/video/railgun.mp4" type="video/mp4">
+        </video>
+        <div class="txt-img__text-group">
           <p>
-            Murlisgib is a custom Free-For-All Deathmatch Gamemode
-            inspired by similar modes in Quake and Ratz Instagib*.
-            Instantly kill using the slow-firing but dead-accurate
-            Railgun to unleash a juicy barrage of gibs popping out
-            of your enemies!
+            Murlisgib is a custom <strong>Free-For-All Death&shy;match Gamemode</strong>
+            inspired by similar modes in
+            <abbr title="Even though I admittedly never played either game 😬">
+            Quake and Ratz Instagib</abbr>.
+            <strong>Instantly kill</strong> using the <strong>slow-firing</strong>
+            but <strong>dead-accurate Railgun</strong> to unleash a juicy barrage
+            of gibs popping out of your enemies!
           </p>
         </div>
       </div>
 
       <h3>Movement</h3>
-      <div class="txt-img">
-        <video src=""></video>
-        <div class="text-group">
-          <h4>Blast Jumping</h4>
+      <h4 class="txt-img__headline">Blast Jumping</h4>
+      <div class="txt-img txt-img--reverse">
+        <video autoplay loop muted disableremoteplayback class="txt-img__img">
+          <source src="./res/video/blast_jump.mp4" type="video/mp4">
+        </video>
+        <div class="txt-img__text-group">
           <p>
             The main twist about Murlisgib is it’s fast movement.
             Blast-Jumping (essentially Rocket Jumping from TF2)
-            is your main way of gaining height and building up
-            speed. Shoot below your feet to for a high jump or
-            shoot the ground behind you repeatedly to build up speed.
+            is your main way of <strong>gaining height</strong>
+            and <strong>building up speed</strong>. Shoot below
+            your feet for a high jump or shoot the ground behind
+            you repeatedly to build up speed.
+          </p>
+        </div>
+      </div>
+
+      <h4 class="txt-img__headline">Auto Bunnyhopping</h4>
+      <div class="txt-img">
+        <video autoplay loop muted disableremoteplayback class="txt-img__img">
+          <source src="./res/video/bhop.mp4" type="video/mp4">
+        </video>
+        <div class="txt-img__text-group">
+          <p>
+            Accelerate to lightning fast speeds using automatic
+            bunnyhopping: Hold <kbd>Jump</kbd> to instantly jump
+            again after landing. This will <strong>conserve your
+            momentum</strong>. Combine with blast-jumping to get
+            faster and faster.
+          </p>
+        </div>
+      </div>
+
+      <h4 class="txt-img__headline">Air Strafing & Low Gravity</h4>
+      <div class="txt-img txt-img--reverse">
+        <video autoplay loop muted disableremoteplayback class="txt-img__img">
+          <source src="./res/video/strafing.mp4" type="video/mp4">
+        </video>
+        <div class="txt-img__text-group">
+          <p>
+            Air Strafing is <strong>very direct</strong> in
+            Murlisgib. Control yourself mid-air similar to surf
+            gamemodes!
+          </p>
+
+          <p>
+            Combine with the techniques above to keep your
+            velocity around corners and be a hard to hit target
+            for enemy players. <strong>Lower gravity</strong>
+            assists you with staying in the air.
+          </p>
+        </div>
+      </div>
+
+      <h3>The Shotgun</h3>
+      <div class="txt-img">
+        <video autoplay loop muted disableremoteplayback class="txt-img__img">
+          <source src="./res/video/shotgun.mp4" type="video/mp4">
+        </video>
+        <div class="txt-img__text-group">
+          <p>
+            The Shotgun is a powerful <strong>bonus weapon</strong>.
+            Close up, it deals a lot of damage spread over 8 bullets.
+          </p>
+          <p>
+            Even better: It allows for <strong>stronger</strong>,
+            faster and higher <strong>blast-jumps</strong>! Use it
+            to rapidly close the distance to your enemies or to
+            make quick escapes.
+          </p>
+        </div>
+      </div>
+
+      <h4 class="txt-img-headline">How to Get It?</h4>
+      <div class="txt-img txt-img--reverse">
+        <video autoplay loop muted disableremoteplayback class="txt-img__img">
+          <source src="./res/video/shotgun_transfer.mp4" type="video/mp4">
+        </video>
+        <div class="txt-img__text-group">
+          <p>
+            There is only ever <strong>one Shotgun</strong> on
+            the field. Steal it by <strong>gibbing the player
+            currently holding</strong> it. When no one has the
+            Shotgun, the next player to get a frag will receive
+            it.
+          </p>
+
+          <p>
+            Each swap of the Shotgun will be
+            <strong>announced</strong> to everyone. So keep an
+            eye out on who to target first!
           </p>
         </div>
       </div>
