--- a/index.html
+++ b/index.html
@@ -231,6 +231,12 @@
     </section>
   </main>
 
+<script>
+  // dirty redirect to HTTP because of... reasons.
+  if (window.location.protocol === "https:") {
+    window.location.replace('http:' + window.location.href.slice(6));
+  }
+</script>
 </body>
 
 </html>
