Add build process & improve server fetching slightly

--- a/src/index.html
+++ b/src/index.html
@@ -6,8 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
   <title>Murlisgib</title>
   <link rel="stylesheet" href="css/reset.css">
-  <link rel="stylesheet" href="css/style.css">
-  <script src="./js/fetch-servers.js" defer></script>
+  <link rel="stylesheet" href="css/style.scss">
+  <script src="./js/fetch-servers.js" async></script>
   <script src="./js/interactions.js" defer></script>
 </head>
 
