Add fetching data msg & add favicon

--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,16 @@
   <link rel="stylesheet" href="css/style.scss">
   <script src="./js/fetch-servers.js" async></script>
   <script src="./js/interactions.js" defer></script>
+
+  <link rel="apple-touch-icon" sizes="180x180" href="/res/favicon/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/res/favicon/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/res/favicon/favicon-16x16.png">
+  <link rel="manifest" href="/res/favicon/site.webmanifest">
+  <link rel="mask-icon" href="/res/favicon/safari-pinned-tab.svg" color="#26203a">
+  <link rel="shortcut icon" href="/res/favicon/favicon.ico">
+  <meta name="msapplication-TileColor" content="#26203a">
+  <meta name="msapplication-config" content="/res/favicon/browserconfig.xml">
+  <meta name="theme-color" content="#26203a">
 </head>
 
 <body>
@@ -54,6 +64,7 @@
               <div class="servers__map"></div>
               <div class="servers__players"></div>
               <div class="servers__status"></div>
+              <div class="servers__loading">Fetching Server-Data&mldr;</div>
             </button>
             <div class="servers__expand">
               <a class="servers__joinbtn" href="steam://connect/play.gib.murl.is:27015">Join Server</a>
@@ -69,6 +80,7 @@
               <div class="servers__map"></div>
               <div class="servers__players"></div>
               <div class="servers__status"></div>
+              <div class="servers__loading">Fetching Server-Data&mldr;</div>
             </button>
             <div class="servers__expand">
               <a class="servers__joinbtn" href="steam://connect/play.gib.murl.is:27025">Join Server</a>
@@ -84,6 +96,7 @@
               <div class="servers__map"></div>
               <div class="servers__players"></div>
               <div class="servers__status"></div>
+              <div class="servers__loading">Fetching Server-Data&mldr;</div>
             </button>
             <div class="servers__expand">
               <a class="servers__joinbtn" href="steam://connect/play.gib.murl.is:27035">Join Server</a>
@@ -99,6 +112,7 @@
               <div class="servers__map"></div>
               <div class="servers__players"></div>
               <div class="servers__status"></div>
+              <div class="servers__loading">Fetching Server-Data&mldr;</div>
             </button>
             <div class="servers__expand">
               <a class="servers__joinbtn" href="steam://connect/play.gib.murl.is:27045">Join Server</a>
