Randomize subheadline on page load

--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="css/reset.css">
   <link rel="stylesheet" href="css/style.scss">
   <script src="./js/fetch-servers.js" async></script>
+  <script src="./js/random-headline.js" defer></script>
   <script src="./js/interactions.js" defer></script>
 
   <link rel="apple-touch-icon" sizes="180x180" href="/res/favicon/apple-touch-icon.png">
