--- a/src/index.html
+++ b/src/index.html
@@ -20,6 +20,16 @@
   <meta name="msapplication-TileColor" content="#26203a">
   <meta name="msapplication-config" content="/res/favicon/browserconfig.xml">
   <meta name="theme-color" content="#26203a">
+
+  <meta name="author" content="murlis">
+  <meta name="description" content="A custom FFA Instagib Gamemode for CS:GO.">
+  <meta name="keywords" content="csgo, instagib, custom gamemode, rocket jump, bhop, movement">
+
+  <meta property="og:title" content="Murlisgib">
+  <meta property="og:description" content="A custom FFA Instagib Gamemode for CS:GO.">
+  <meta property="og:image" content="https://gib.murl.is/static/embed.png">
+
+  <meta name="twitter:title" content="Murlisgib">
 </head>
 
 <body>
