Improve remark styles

--- a/src/index.html
+++ b/src/index.html
@@ -149,8 +149,8 @@
           <p>
             Murlisgib is a custom <strong>Free-For-All Death&shy;match Gamemode</strong>
             inspired by similar modes in
-            <abbr title="Even though I admittedly never played either game 😬">
-            Quake and Ratz Instagib</abbr>.
+            <abbr class="remark" title="Even though I admittedly never played either game 😬">
+            Quake and Ratz Instagib*</abbr>.
             <strong>Instantly kill</strong> using the <strong>slow-firing</strong>
             but <strong>dead-accurate Railgun</strong> to unleash a juicy barrage
             of gibs popping out of your enemies!
