Fix styling/interaction inconsistencies

--- a/src/index.html
+++ b/src/index.html
@@ -142,15 +142,17 @@
 
       <h3>Introduction</h3>
       <div class="txt-img">
-        <video autoplay loop muted disableremoteplayback class="txt-img__img">
-          <source src="./res/video/railgun.mp4" type="video/mp4">
-        </video>
+        <div class="txt-img__img">
+          <video autoplay loop muted disableremoteplayback>
+            <source src="./res/video/railgun.mp4" type="video/mp4">
+          </video>
+        </div>
         <div class="txt-img__text-group">
           <p>
             Murlisgib is a custom <strong>Free-For-All Death&shy;match Gamemode</strong>
             inspired by similar modes in
             <abbr class="remark" title="Even though I admittedly never played either game 😬">
-            Quake and Ratz Instagib*</abbr>.
+            Quake and Ratz Instagib</abbr>.
             <strong>Instantly kill</strong> using the <strong>slow-firing</strong>
             but <strong>dead-accurate Railgun</strong> to unleash a juicy barrage
             of gibs popping out of your enemies!
@@ -161,9 +163,11 @@
       <h3>Movement</h3>
       <h4 class="txt-img__headline">Blast Jumping</h4>
       <div class="txt-img txt-img--reverse">
-        <video autoplay loop muted disableremoteplayback class="txt-img__img">
-          <source src="./res/video/blast_jump.mp4" type="video/mp4">
-        </video>
+        <div class="txt-img__img">
+          <video autoplay loop muted disableremoteplayback>
+            <source src="./res/video/blast_jump.mp4" type="video/mp4">
+          </video>
+        </div>
         <div class="txt-img__text-group">
           <p>
             The main twist about Murlisgib is it’s fast movement.
@@ -178,9 +182,11 @@
 
       <h4 class="txt-img__headline">Auto Bunnyhopping</h4>
       <div class="txt-img">
-        <video autoplay loop muted disableremoteplayback class="txt-img__img">
-          <source src="./res/video/bhop.mp4" type="video/mp4">
-        </video>
+        <div class="txt-img__img">
+          <video autoplay loop muted disableremoteplayback>
+            <source src="./res/video/bhop.mp4" type="video/mp4">
+          </video>
+        </div>
         <div class="txt-img__text-group">
           <p>
             Accelerate to lightning fast speeds using automatic
@@ -194,9 +200,11 @@
 
       <h4 class="txt-img__headline">Air Strafing & Low Gravity</h4>
       <div class="txt-img txt-img--reverse">
-        <video autoplay loop muted disableremoteplayback class="txt-img__img">
-          <source src="./res/video/strafing.mp4" type="video/mp4">
-        </video>
+        <div class="txt-img__img">
+          <video autoplay loop muted disableremoteplayback>
+            <source src="./res/video/strafing.mp4" type="video/mp4">
+          </video>
+        </div>
         <div class="txt-img__text-group">
           <p>
             Air Strafing is <strong>very direct</strong> in
@@ -215,9 +223,11 @@
 
       <h3>The Shotgun</h3>
       <div class="txt-img">
-        <video autoplay loop muted disableremoteplayback class="txt-img__img">
-          <source src="./res/video/shotgun.mp4" type="video/mp4">
-        </video>
+        <div class="txt-img__img">
+          <video autoplay loop muted disableremoteplayback>
+            <source src="./res/video/shotgun.mp4" type="video/mp4">
+          </video>
+        </div>
         <div class="txt-img__text-group">
           <p>
             The Shotgun is a powerful <strong>bonus weapon</strong>.
@@ -234,9 +244,11 @@
 
       <h4 class="txt-img-headline">How to Get It?</h4>
       <div class="txt-img txt-img--reverse">
-        <video autoplay loop muted disableremoteplayback class="txt-img__img">
-          <source src="./res/video/shotgun_transfer.mp4" type="video/mp4">
-        </video>
+        <div class="txt-img__img">
+          <video autoplay loop muted disableremoteplayback>
+            <source src="./res/video/shotgun_transfer.mp4" type="video/mp4">
+          </video>
+        </div>
         <div class="txt-img__text-group">
           <p>
             There is only ever <strong>one Shotgun</strong> on
