Fix FOUC for map/player icons in dark theme

--- a/src/index.html
+++ b/src/index.html
@@ -35,6 +35,8 @@
 <body>
 
   <div class="precache" aria-hidden="true">
+    <img src="./res/svg/map.svg">
+    <img src="./res/svg/players.svg">
     <img src="./res/svg/online-w.svg">
     <img src="./res/svg/offline-w.svg">
     <img src="./res/svg/copy.svg">
