Change video src to official trailer

--- a/src/index.html
+++ b/src/index.html
@@ -57,7 +57,7 @@
     <section>
       <div class="trailer">
         <iframe
-          src="https://www.youtube-nocookie.com/embed/CUIUoccDnFk?vq=hd1080&modestbranding=1&rel=0&fs=1"
+          src="https://www.youtube-nocookie.com/embed/ANk2Zkq1v3s?vq=highres&modestbranding=1&rel=0&fs=1"
           allowfullscreen>
         </iframe>
         <div class="trailer__orange"></div>
