Fix servers displaying wrong domains

--- a/src/index.html
+++ b/src/index.html
@@ -80,9 +80,9 @@
               <div class="servers__loading">Fetching Server-Data&mldr;</div>
             </button>
             <div class="servers__expand">
-              <a class="servers__joinbtn" href="steam://connect/play.gib.murl.is:27015">Join Server</a>
+              <a class="servers__joinbtn" href="steam://connect/eu.gib.murl.is:27015">Join Server</a>
               <div class="servers__ip">
-                <div class="servers__iptext">connect play.gib.murl.is:27015</div>
+                <div class="servers__iptext">connect eu.gib.murl.is:27015</div>
                 <button class="servers__ipbtn" aria-label="Copy"></button>
               </div>
             </div>
@@ -96,9 +96,9 @@
               <div class="servers__loading">Fetching Server-Data&mldr;</div>
             </button>
             <div class="servers__expand">
-              <a class="servers__joinbtn" href="steam://connect/play.gib.murl.is:27025">Join Server</a>
+              <a class="servers__joinbtn" href="steam://connect/eu.gib.murl.is:27025">Join Server</a>
               <div class="servers__ip">
-                <div class="servers__iptext">connect play.gib.murl.is:27025</div>
+                <div class="servers__iptext">connect eu.gib.murl.is:27025</div>
                 <button class="servers__ipbtn" aria-label="Copy"></button>
               </div>
             </div>
@@ -112,9 +112,9 @@
               <div class="servers__loading">Fetching Server-Data&mldr;</div>
             </button>
             <div class="servers__expand">
-              <a class="servers__joinbtn" href="steam://connect/play.gib.murl.is:27035">Join Server</a>
+              <a class="servers__joinbtn" href="steam://connect/eu.gib.murl.is:27035">Join Server</a>
               <div class="servers__ip">
-                <div class="servers__iptext">connect play.gib.murl.is:27035</div>
+                <div class="servers__iptext">connect eu.gib.murl.is:27035</div>
                 <button class="servers__ipbtn" aria-label="Copy"></button>
               </div>
             </div>
@@ -128,9 +128,9 @@
               <div class="servers__loading">Fetching Server-Data&mldr;</div>
             </button>
             <div class="servers__expand">
-              <a class="servers__joinbtn" href="steam://connect/play.gib.murl.is:27045">Join Server</a>
+              <a class="servers__joinbtn" href="steam://connect/eu.gib.murl.is:27045">Join Server</a>
               <div class="servers__ip">
-                <div class="servers__iptext">connect play.gib.murl.is:27045</div>
+                <div class="servers__iptext">connect eu.gib.murl.is:27045</div>
                 <button class="servers__ipbtn" aria-label="Copy"></button>
               </div>
             </div>
