Add game (csgo) title to the description

--- a/src/index.html
+++ b/src/index.html
@@ -152,8 +152,8 @@
         <div class="txt-img__text-group">
           <p>
             Murlisgib is a custom <strong>Free-For-All Death&shy;match Gamemode</strong>
-            inspired by similar modes in
-            <abbr class="remark" title="Even though I admittedly never played either game 😬">
+            for Counter-Strike: Global Offensive, inspired by similar modes in
+            <abbr class="remark" title="Admittedly I never played either game. 😬">
             Quake and Ratz Instagib</abbr>.
             <strong>Instantly kill</strong> using the <strong>slow-firing</strong>
             but <strong>dead-accurate Railgun</strong> to unleash a juicy barrage
